<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.arcainne.BamBam.HostActivity">

    <TextView android:id="@+id/active_instructions_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_instructions_text"
        android:textStyle="bold"
        android:layout_above="@+id/phone_roster_id"
        android:layout_alignRight="@+id/phone_roster_id"
        android:layout_alignEnd="@+id/phone_roster_id"
        android:layout_marginBottom="64dp" />

    <TextView android:id="@+id/host_score_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textStyle="bold"
        android:layout_above="@+id/active_instructions_id"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <TextView android:id="@+id/phone_roster_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_roster_text"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/last_received_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_received_text"
        android:textStyle="bold"
        android:layout_below="@+id/phone_roster_id"
        android:layout_alignRight="@+id/phone_roster_id"
        android:layout_alignEnd="@+id/phone_roster_id"
        android:layout_marginTop="64dp" />

</RelativeLayout>
