<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <!-- android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"-->

    <TextView android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:layout_above="@+id/button_host"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:textStyle="bold" />

    <Button android:id="@+id/button_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_host"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/button_join"
        android:layout_centerHorizontal="true"
        android:onClick="loadHostScreen" />

    <Button android:id="@+id/button_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_join"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="loadJoinScreen" />

</RelativeLayout>
